# imagecas_extended

./: .gitignore  pyproject.toml  requirements.txt
src/inlet_annotation_processing/: inlet_annotation_processing.py  readme.md
src/pipeline/: coronary_artery_separator.py
src/utils/: file_io.py  logger.py  mesh_utils.py  volume_utils.py
src/visualization/: vis_imagecas.py
